WIZ-2 Render 'All posts page'

--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -28,7 +28,7 @@
 
             <ul class="menu">
                 <li><a href="/">Home</a></li>
-                <li><a href="#">All Posts</a></li>
+                <li><a href="/posts/all">All Posts</a></li>
                 <!-- Logged users -->
                 {{#if isAuthenticated}}
                 <li><a href="#">Create Post</a></li>
