--- a/src/views/post/all-posts.hbs
+++ b/src/views/post/all-posts.hbs
@@ -7,7 +7,7 @@
                     <!-- If there are posts for creature in the database display each of them -->
                     <div class="flip flip-vertical">
                         <div class="front">
-                            <img src="./static/img/Thestral.jpeg"
+                            <img src="/img/Thestral.jpeg"
                                 alt="Thestral">
                         </div>
                         <div class="back">
@@ -24,7 +24,7 @@
 
                     <div class="flip flip-vertical">
                         <div class="front">
-                            <img src="./static/img/Draco.jpg"
+                            <img src="/img/Draco.jpg"
                                 alt="Draco_Malfoy">
                         </div>
                         <div class="back">
@@ -41,7 +41,7 @@
 
                     <div class="flip flip-vertical">
                         <div class="front">
-                            <img src="./static/img/Newt.jpg"
+                            <img src="/img/Newt.jpg"
                                 alt="Newt_Scamander">
                         </div>
                         <div class="back">
@@ -58,7 +58,7 @@
 
                     <div class="flip flip-vertical">
                         <div class="front">
-                            <img src="./static/img/Nymphadora.jpg"
+                            <img src="/img/Nymphadora.jpg"
                                 alt="Nymphadora_Tonks">
 
                         </div>
@@ -77,7 +77,7 @@
 
                     <div class="flip flip-vertical">
                         <div class="front">
-                            <img src="./static/img/Hagrid.jpg"
+                            <img src="/img/Hagrid.jpg"
                                 alt="Hagrid">
 
                         </div>
