WIZ-2 Render 'my profile' and 'create post' pages

--- a/src/views/post/profile.hbs
+++ b/src/views/post/profile.hbs
@@ -6,7 +6,7 @@
                     <!-- If there are own posts in the database display each of them -->
                     <div class="my-card">
                         <div class="card-header">
-                            <img src="./static/img/Thestral.jpeg"/>
+                            <img src="/img/Thestral.jpeg"/>
                         </div>
                         <div class="card-body">
                             <span class="tag tag-teal">Species: Beast</span>
