--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -31,8 +31,8 @@
                 <li><a href="/posts/all">All Posts</a></li>
                 <!-- Logged users -->
                 {{#if isAuthenticated}}
-                <li><a href="#">Create Post</a></li>
-                <li><a href="#">Profile</a></li>
+                <li><a href="posts/create">Create Post</a></li>
+                <li><a href="/posts/profile">Profile</a></li>
                 <li><a href="/users/logout">Logout</a></li>
                 {{else}}
                 <!-- Guest users -->
