--- a/src/views/post/all-posts.hbs
+++ b/src/views/post/all-posts.hbs
@@ -5,6 +5,7 @@
                 <div class="band">
 
                     <!-- If there are posts for creature in the database display each of them -->
+                {{#if creatures}}
                     {{#each creatures}}
                     <div class="flip flip-vertical">
                         <div class="front">
@@ -15,16 +16,18 @@
                             <h1>{{name}}</h1>
                             <h2>Species: {{species}}</h2>
                             <p>Description: {{description}}</p>
-                            <a href="/details" class="details">Details</a>
+                            <a href="/posts/{{_id}}/details" class="details">Details</a>
                         </div>
                     </div>
                     {{/each}}
-
+                {{else}}
 
                     <!-- If there are still no posts in the database display: -->
-                    <!-- <div class="no-posts">
+                    <div class="no-posts">
                         <p class="no-offer">There are no posts yet...</p>
-                    </div> -->
+                    </div>
+                {{/if}}    
+
                 </div>
             </section>
         </main>
