WIZ-2 Profile: Show my posts, if there are no posts -> show msg

--- a/src/views/post/profile.hbs
+++ b/src/views/post/profile.hbs
@@ -16,7 +16,7 @@
                         </h4>
                         <div class="user">
                             <div class="user-info">
-                                <h5>Author: </h5>
+                                <h5>Author: {{owner.firstName}}  {{owner.lastName}}</h5>
                                 <small>Rating of votes: 3</small>
                                 <a href="/posts/{{_id}}/details" class="details_btn">Details</a>
                                 
