--- a/src/views/post/details.hbs
+++ b/src/views/post/details.hbs
@@ -20,10 +20,17 @@
                         <a href="/posts/{{creature._id}}/delete" class="del-btn">Delete</a>
                         {{else}}
                         <!-- logged in users, who have not yet voted-->
-                        <a href="#" class="vote-up">Vote</a>
+                        {{#unless hasVoted}}
+                            <a href="/posts/{{creature._id}}/vote" class="vote-up">Vote</a>
+                        {{/unless}}
+
                         {{/if}}
-                        <!-- logged in user who has already voted-->
-                        <p class="thanks-for-vote">Thanks For Voting</p>
+
+                        {{#if hasVoted}}
+                            <!-- logged in user who has already voted-->
+                            <p class="thanks-for-vote">Thanks For Voting</p>
+                        {{/if}}
+                        
                     </div>
                     {{/if}}
                 </div>
